<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".InputProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/jarak_20dp"
        android:layout_marginHorizontal="@dimen/jarak_20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_nama"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black_3"
        android:layout_marginBottom="@dimen/jarak_12dp"
        android:textSize="32dp"/>

        <EditText
            android:id="@+id/nama_panggilan"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textColor="@color/brown_grey"
            android:layout_marginBottom="@dimen/jarak_12dp"
            android:hint="@string/input_nama_contoh"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_umur"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black_3"
            android:layout_marginBottom="@dimen/jarak_12dp"
            android:textSize="32dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textColor="@color/brown_grey"
            android:hint="@string/input_umur_contoh"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/btnSelanjutnya"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="Selanjutnya"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/nunito_bold"
            android:background="@drawable/button_yellow_gradient"
            android:layout_marginHorizontal="@dimen/jarak_20dp" />

    </LinearLayout>
</RelativeLayout>