<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KodeKeluarga">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/jarak_20dp"
        android:layout_marginHorizontal="@dimen/jarak_20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kode_keluarga"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black_3"
            android:textSize="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/jarak_8dp"
            android:text="@string/kode_keluarga_text"
            android:textSize="@dimen/text_size_20sp"
            android:fontFamily="@font/rubik_regular"/>

        <EditText
            android:id="@+id/kode_keluarga"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:layout_marginVertical="@dimen/jarak_8dp"
            android:hint="Input Kode Keluarga"
            android:textSize="@dimen/text_size_20sp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black_3"
            android:background="@drawable/blackborder"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/jarak_8dp"
            android:text="@string/kode_keluarga_info"
            android:textColor="@color/black_3"
            android:textSize="@dimen/text_size_14sp"/>

        <TextView
            android:id="@+id/btnMasuk"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_marginVertical="@dimen/jarak_12dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="Masuk"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black_3"
            android:background="@drawable/button_yellow_gradient"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:shadowColor="#66000000"
        android:shadowDx="0"
        android:gravity="center"
        android:shadowDy="2"
        android:orientation="vertical"
        android:shadowRadius="4"
        android:layout_alignParentBottom="true"
        android:background="@color/white_2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:layout_marginBottom="@dimen/jarak_8dp"
            android:textSize="@dimen/text_size_18sp"
            android:text="@string/btn_kode_keluarga_detail"/>

        <TextView
            android:id="@+id/btnMulai"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/mulai"
            android:textSize="@dimen/text_size_18sp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/white"
            android:background="@drawable/button_purple_gradient"
            android:layout_marginHorizontal="@dimen/jarak_20dp" />

    </LinearLayout>

</RelativeLayout>